add query param & some code clean up

--- a/UI/index.html
+++ b/UI/index.html
@@ -22,20 +22,22 @@
 	</section>
 
 	<section class="advanced-search">
-		<form action="">
-			<fieldset>
-				<legend>Type of Food</legend>
-				<input type="checkbox" name="food_type" value="Burger" id="burger">
-				<label for="burger">Burger</label>
-				<input type="checkbox" name="food_type" value="Sandwich" id="sandwich">
-				<label for="sandwich">Sandwich</label>
-				<input type="checkbox" name="food_type" value="Noodle" id="noodle">
-				<label for="noodle">Noodle</label>
-				<input type="checkbox" name="food_type" value="Cake" id="cake">
-				<label for="cake">Cake</label>
-				<input type="checkbox" name="food_type" value="Drink" id="drink">
-				<label for="drink">Drink</label>
-			</fieldset>
+		<form id="advanced-search-form">
+			<label><input type="checkbox" name="type" value="Burger" class="food-type">Burger</label>
+			<label><input type="checkbox" name="type" value="Sandwich" class="food-type">Sandwich</label>
+			<label><input type="checkbox" name="type" value="Noodle" class="food-type">Noodle</label>
+			<label><input type="checkbox" name="type" value="Cake" class="food-type">Cake</label>
+			<label><input type="checkbox" name="type" value="Drink" class="food-type">Drink</label>
+			<label><input type="checkbox" name="type" value="BBQ" class="food-type">BBQ</label>
+			<label><input type="checkbox" name="type" value="Grill" class="food-type">Grill</label>
+			<label><input type="checkbox" name="type" value="Pasta" class="food-type">Pasta</label>
+			<label><input type="checkbox" name="type" value="Pizza" class="food-type">Pizza</label>
+			<label><input type="checkbox" name="type" value="Korean" class="food-type">Korean</label>
+			<label><input type="checkbox" name="type" value="Chinese" class="food-type">Chinese</label>
+			<label><input type="checkbox" name="type" value="Japanese" class="food-type">Japanese</label>
+			<label><input type="checkbox" name="type" value="Indian" class="food-type">Indian</label>
+			<label><input type="checkbox" name="type" value="Italian" class="food-type">Italian</label>
+			<label><input type="checkbox" name="type" value="Mexican" class="food-type">Mexican</label>
 		</form>
 	</section>
 
