enable 'all' checkbox

--- a/foodtruck-war/src/main/webapp/index.html
+++ b/foodtruck-war/src/main/webapp/index.html
@@ -38,6 +38,7 @@
 			<label><input type="checkbox" name="type" value="Indian" class="food-type">Indian</label>
 			<label><input type="checkbox" name="type" value="Italian" class="food-type">Italian</label>
 			<label><input type="checkbox" name="type" value="Mexican" class="food-type">Mexican</label>
+			<label><input type="checkbox" name="type" value="all" class="all-type">All</label>
 		</form>
 	</section>
 
